--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,33 +2,41 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+env:
+  MAJOR_VERSION: 0
+  MINOR_VERSION: 6
+  MICRO_VERSION: 3
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      with: 
-        version: v0.6.3
-    
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/checkout@v4
 
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile 
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:${{ env.MAJOR_VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.MICRO_VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.MICRO_VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name}}:${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ env.MICRO_VERSION }}-${{ env.SHORT_SHA }}
