--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.3
 openai==1.79.0
 coverage==7.5.1
-google-genai==1.21.1
+google-generativeai==0.8.5
 prometheus_client==0.19.0
 python-json-logger==0.1.11
 flask_cors==4.0.0
