chore: fixing ci testing with flask

--- a/.github/workflows/ci-python.yaml
+++ b/.github/workflows/ci-python.yaml
@@ -12,9 +12,11 @@ jobs:
 
   linting:
     uses: woped/devops/.github/workflows/linting.yaml@main
-  testing_pytest:
-    uses: woped/devops/.github/workflows/testing_pytest.yaml@main
+  testing_flask:
+    with:
+      FLASK_APP: llm-api-connector.py
+    uses: woped/devops/.github/workflows/testing_pyflask.yaml@main
   sonar_python:
-    needs: testing_pytest
+    needs: testing_flask
     uses: woped/devops/.github/workflows/sonar_python.yaml@main
     secrets: inherit
