ci: sonar_python automatically runs tests

--- a/.github/workflows/ci-python.yaml
+++ b/.github/workflows/ci-python.yaml
@@ -12,13 +12,9 @@ jobs:
 
   linting:
     uses: woped/devops/.github/workflows/linting.yaml@main
-  testing_flask:
-    with:
-      FLASK_APP: llm-api-connector.py
-    uses: woped/devops/.github/workflows/testing_flask.yaml@main
   sonar_python:
-    needs: testing_flask
     with:
       FLASK_APP: llm-api-connector.py
+      FLASK_ENV: testing
     uses: woped/devops/.github/workflows/sonar_flask.yaml@main
     secrets: inherit
