--- a/.github/workflows/ci-python.yaml
+++ b/.github/workflows/ci-python.yaml
@@ -7,11 +7,6 @@ on:
     branches: [main, master]
 
 jobs:
-  bootstrap:
-    runs-on: ubuntu-latest
-    steps:
-      - name: bootstrap
-        run: echo "bootstrap job - no actions executed"
 
   validate_commit_messages:
     uses: woped/devops/.github/workflows/validate-commit-msg.yaml@main
@@ -21,8 +16,8 @@ jobs:
 
   testing_flask:
     with:
-      FLASK_APP: llm-api-connector.py
-      FLASK_ENV: testing
+      flask_app: llm-api-connector.py
+      flask_env: testing
     uses: woped/devops/.github/workflows/testing_flask.yaml@main
 
   sonar_python:
