--- a/.github/workflows/ci-python.yaml
+++ b/.github/workflows/ci-python.yaml
@@ -20,7 +20,7 @@ jobs:
       flask_env: testing
     uses: woped/devops/.github/workflows/testing_flask.yaml@main
 
-  sonar_python:
-    needs: testing_flask
-    uses: woped/devops/.github/workflows/sonar_flask.yaml@main
-    secrets: inherit
+  # sonar_flask:
+  #   needs: testing_flask
+  #   uses: woped/devops/.github/workflows/sonar_flask.yaml@main
+  #   secrets: inherit
