--- a/.github/workflows/cd-release.yaml
+++ b/.github/workflows/cd-release.yaml
@@ -7,6 +7,11 @@ permissions:
 on:
   push:
     branches: [main, master]
+  workflow_run:
+    workflows: ["CI Pipeline"]
+    types:
+      - completed
+    branches: [main, master]
 
 jobs:
   semver:
