--- a/.github/workflows/cd-release.yaml
+++ b/.github/workflows/cd-release.yaml
@@ -30,11 +30,9 @@ jobs:
       VERSION: ${{ needs.semver.outputs.VERSION }}
       RELEASE_NOTES: ${{ needs.semver.outputs.RELEASE_NOTES }}
 
-  docker_build_and_push:
-    uses: woped/devops/.github/workflows/docker-build-and-push.yaml@main
+  docker_build_and_push_python:
+    uses: woped/devops/.github/workflows/docker-build-and-push-python.yaml@main
     needs: [semver, approval]
-    with:
-      version: ${{ needs.semver.outputs.VERSION }}
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
